[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apastats"
version = "0.2.0"
description = "APA 7th edition compliant statistical analyses for organizational science. Think Stata, but open source, in Python, and APA formatted for publication out of the box."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Aman Kabra"},
]
keywords = [
    "apa", "jap", "organizational-behavior", "psychology",
    "statistics", "moderation", "mediation", "correlations",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
docx = ["python-docx>=1.0"]
cfa = ["semopy>=2.3"]
reliability = ["factor_analyzer>=0.5"]
all = ["python-docx>=1.0", "semopy>=2.3", "factor_analyzer>=0.5"]
dev = ["pytest>=7.0", "pytest-cov", "pingouin>=0.5", "python-docx>=1.0", "semopy>=2.3", "factor_analyzer>=0.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apastats*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: Monte Carlo tests (deselect with '-m not slow')",
]
